; `melange.emit` is a Dune stanza that will produce build rules to generate
; JavaScript files from sources using the Melange compiler
; https://dune.readthedocs.io/en/stable/melange.html#melange-emit

(melange.emit
 (target output)
 (alias react)
 (libraries reason-react world melange.belt relude)
 (modules :standard \ hello)
 (preprocess
  (pps melange.ppx reason-react-ppx))
 (module_systems es6)
 (compile_flags -open Relude.Globals))

(melange.emit
 (target node)
 (alias node)
 (libraries world)
 (modules hello)
 (module_systems commonjs))
